    deb-specific, fixed missing lib for cvs in install-chroot.sh
  * Fix mailman ScriptAlias
  * SYSLOGD is now to set in /etc/default/syslogd
  * Renamed update-user-group-cvs.sh in update-user-group-ssh.sh
    as it doesn't update CVS

  [ Roland Mas ]
  * Tracking upstream SVN.
  * Fix a few bashisms in shell scripts (closes: #489600, #489601).
  * Tweaked dependencies on virtual packages.

 -- Roland Mas <lolando@debian.org>  Sun, 20 Jul 2008 15:59:01 +0200

gforge (4.6.99+svn6496-1) unstable; urgency=low

  * New SVN snapshot, incuding a fix for the previous patch.

 -- Roland Mas <lolando@debian.org>  Wed, 14 May 2008 18:27:34 +0200

gforge (4.6.99+svn6491-1) unstable; urgency=high

  * New SVN snapshot, includes fix for an insecure file handling
    (CVE-2008-0167).

 -- Roland Mas <lolando@debian.org>  Tue, 13 May 2008 12:20:18 +0200

gforge (4.6.99+svn6486-1) unstable; urgency=low

  * New SVN snapshot.
  * Updated Debconf template translations for Portuguese (closes:
    #475769).
  * Removed from gforge-plugins-extra a file that should only be in
    gforge-plugin-mediawiki (closes: #476582).
  * Enabled the "headers" module in apache2, since the database auth
    tokens are now received through an extra header rather than through
    environment variables.

 -- Roland Mas <lolando@debian.org>  Thu, 24 Apr 2008 22:57:54 +0200

gforge (4.6.99+svn6477-1) unstable; urgency=low

  [ Christian Bayle ]
  * Change apache NameVirtualHost to use * instead of IP address
  * Harden exim4 uninstall so it doesn't fail on a missing file
  * Don't invoke proftpd restart as it locks install
  * Replace deprecated DisplayFirstChdir with DisplayChdir in proftpd config

  [ Roland Mas ]
  * New SVN snapshot.
  * New feature from the "urlmaker" branch, to compute URLs for links and
    forms in one single place, the point being to make it easier to host
    Gforge in a variety of URL schemes (full virtual host or
    http://shared.host/gforge, for instance). 