@@ -16,8 +16,10 @@ gforge (4.6.99+svn6549+something-1) unstable; urgency=low
   * Tracking upstream SVN.
   * Fix a few bashisms in shell scripts (closes: #489600, #489601).
   * Tweaked dependencies on virtual packages.
+  * Fixed PostgreSQL socket path in Postfix configuration, and removed old
+    unused code.
 
- -- Roland Mas <lolando@debian.org>  Sun, 20 Jul 2008 15:59:01 +0200
+ -- Roland Mas <lolando@debian.org>  Sun, 20 Jul 2008 17:01:45 +0200
 
 gforge (4.6.99+svn6496-1) unstable; urgency=low
 
